--- a/public/css/base.css
+++ b/public/css/base.css
@@ -63,6 +63,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  scroll-padding-top: 80px; /* Ensure fixed headers don't hide content */
 }
 
 body {
